@@ -1,3 +1,3 @@
 call gradlew build
 
-jpackage --name "Task Glacier" --module-path .;build/libs/ --module taskglacier/task.glacier.ui --add-modules taskglacier --app-version 0.2.3 --icon app-icon-64.ico -i build/libs --win-menu --win-dir-chooser
+jpackage --name "Task Glacier" --app-version 0.2.3 --icon app-icon-64.ico -i build/libs --main-class taskglacier.MainFrame --main-jar task-glacier-ui.jar --win-menu --win-dir-chooser
